# better-ssh-mcp

./: .gitignore  .mcp.json  CLAUDE.md  FEATURES.md  INSTALL-NIX.md  INSTALL.md  Makefile  README.md  SERVERS.md  flake.nix  pyproject.toml
.agentdocs/: audit-master.md  audit-t0-t1a.md  audit-t1b-t1c.md  audit-t2-gates.md  audit-t3-t4.md  gate1-review.md  gate2-review.md  mcp-ssh-design.md  mcp-ssh-plan.md  ops-notes.md  progress.md  remaining-tasks.md  t0-notes.md  t1a-notes.md  t1b-notes.md  t5a-notes.md  t5b-notes.md
.github/workflows/: release.yml
mcp_ssh/: __init__.py  audit.py  config.py  exceptions.py  interfaces.py  models.py  pool.py  registry.py  server.py  session.py  state.py  utils.py
mcp_ssh/tools/: __init__.py  exec_tools.py  pty_tools.py  registry_tools.py  scp_tools.py
tests/: conftest.py  test_audit.py  test_config.py  test_integration.py  test_pool.py  test_registry.py  test_session.py  test_smoke.py  test_smoke_real.py  test_state.py  test_tools_exec.py  test_tools_pty.py  test_tools_registry.py  test_tools_scp.py
tests/fixtures/: servers.toml
