[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-ssh"
version = "0.1.0"
description = "MCP server exposing SSH operations as tools"
readme = "INSTALL.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "ssh", "claude", "ai-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
]
dependencies = [
    "asyncssh>=2.14",
    "pydantic>=2",
    "watchfiles>=0.21",
    "mcp[cli]>=1.0",
]

[project.scripts]
mcp-ssh = "mcp_ssh.server:main"

[project.urls]
Homepage = "https://github.com/messier12/better-ssh-mcp"
Issues = "https://github.com/messier12/better-ssh-mcp/issues"

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
